change http in https

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>PortFolio</title>
-        <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Send+Flowers&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="static/css/style.css">
