add icon and change image web link by path file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Send+Flowers&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="static/css/style.css">
+        <link rel="icon" href="./static/image/Fond-blanc1.jpg">
 
         <script src="./js/script.js" type="module" defer></script>
     </head>
@@ -18,7 +19,7 @@
             </div>
 
             <div class="DivProfilePicture">
-                <img src="https://avatars.githubusercontent.com/u/113699898?v=4" class="ProfilePicture">
+                <img src="./static/image/Fond-blanc1.jpg" class="ProfilePicture">
             </div>
 
             <div class="Name">
