add more button link and set them accessible from every where

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div class="body">
             <div class="HeaderButton">
                 <button class="AboutMeButton"><b><a href="#AboutMe">About Me</a></b></button>
+                <button class="AboutMeButton"><b><a href="#Technologies">Technologies</a></b></button>
+                <button class="AboutMeButton"><b><a href="#Projects">Projects</a></b></button>
                 <button class="Contact" name="contact">Contact</button>
             </div>
 
@@ -47,7 +49,7 @@
                 </p>
             </div>
 
-            <div class="technologies">
+            <div class="technologies" id="Technologies">
                 <h1>TECHNOLOGIES</h1>
 
                 <div class="DivList">
@@ -82,7 +84,7 @@
                 </div>
             </div>
 
-            <div class="SchoolProjects">
+            <div class="SchoolProjects" id="Projects">
                 <h1>SCHOOL PROJECTS</h1>
 
                 <div id="SchoolProjects" class="SchoolProjectsDetail"></div>
