align text image and align all images

--- a/index.html
+++ b/index.html
@@ -110,30 +110,111 @@
                     <ul>
                         <h3>Langages</h3>
 
-                        <li>Golang <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/go/go-original-wordmark.svg"></li>
-                        <li>Javascript <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg"></li>
-                        <li>C <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg"></li>
-                        <li>Python <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg"></li>
-                        <li>Php <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/php/php-original.svg"></li>
-                        <li>Rust <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/rust/rust-original.svg" class="Invert"></li>
+                        <li>
+                            <div>
+                                Golang
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/go/go-original-wordmark.svg">
+                            </div>
+                        </li>
+
+                        <li>
+                            <div>
+                                Javascript
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg">
+                            </div>
+                        </li>
+
+                        <li>
+                            <div>
+                                C
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg">
+                            </div>
+                        </li>
+
+                        <li>
+                            <div>
+                                Python
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg">
+                            </div>
+                        </li>
+
+                        <li>
+                            <div>
+                                Php
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/php/php-original.svg">
+                            </div>
+                        </li>
+
+                        <li>
+                            <div>
+                                Rust
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/rust/rust-original.svg" class="Invert">
+                            </div>
+                        </li>
                     </ul>
                     
                     <ul>
                         <h3>Framework</h3>
 
-                        <li>React <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original.svg"></li>
-                        <li>Django <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/django/django-plain.svg"></li>
-                        <li>Laravel <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/laravel/laravel-original.svg"></li>
+                        <li>
+                            <div>
+                                React
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original.svg">
+                            </div>
+                        </li>
+
+                        <li>
+                            <div>
+                                Django
+                                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/django/django-plain.svg">        
+                            </div>
+                        </li>
+
+                        <li>
+                            <div>
+                                Laravel
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/laravel/laravel-original.svg">
+                            </div>
+                        </li>
                     </ul>
     
                     <ul>
                         <h3>Technologies</h3>
 
-                        <li>VSCode <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/vscode/vscode-original.svg"></li>
-                        <li>SQLite <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/sqlite/sqlite-original.svg"></li>
-                        <li>MySQL <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original.svg"></li>
-                        <li>Github <img class="Invert" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/github/github-original.svg"></li>
-                        <li>Docker <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original.svg"></li>
+                        <li>
+                            <div>
+                                VSCode
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/vscode/vscode-original.svg">
+                            </div>
+                        </li>
+
+                        <li>
+                            <div>
+                                SQLite
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/sqlite/sqlite-original.svg">
+                            </div>
+                        </li>
+
+                        <li>
+                            <div>
+                                MySQL
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original.svg">
+                            </div>
+                        </li>
+
+                        <li>
+                            <div>
+                                Github
+                                <img class="Invert" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/github/github-original.svg">
+                            </div>
+                        </li>
+
+                        <li>
+                            <div>
+                                Docker
+                                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original.svg">
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
