--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>PortFolio</title>
         <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Send+Flowers&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:wght@300&family=Send+Flowers&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="static/css/style.css">
         <link rel="icon" href="./static/image/Fond-blanc1.jpg">
